# eini

./: README.md  meson.build  meson_options.txt
examples/simple/: config.ini  eini.c  eini.h  example.c  meson.build  other.ini
src/: compile_commands.json  eini.c  eini.h  meson.build  tests.c  tests_list.sh
